OIDC id token authentication and access token refreshing
Signed-off-by: David Kral <david.k.kral@oracle.com>